--- a/index.html
+++ b/index.html
@@ -51,6 +51,33 @@
             0%, 100% { box-shadow: 0 4px 15px rgba(0,0,0,0.3); }
             50% { box-shadow: 0 4px 25px rgba(255,107,107,0.5); }
         }
+        /* Singles Notice Banner */
+        .singles-notice {
+            background: linear-gradient(135deg, #e056fd 0%, #9b59b6 100%);
+            color: white;
+            padding: 1rem 2rem;
+            text-align: center;
+            font-size: 1.1rem;
+            font-weight: 600;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            position: relative;
+            z-index: 99;
+        }
+        .singles-notice a {
+            color: #fff;
+            background: rgba(255,255,255,0.25);
+            padding: 0.4rem 1rem;
+            border-radius: 20px;
+            text-decoration: none;
+            margin-right: 0.5rem;
+            transition: all 0.3s;
+            display: inline-block;
+            margin-top: 0.5rem;
+        }
+        .singles-notice a:hover {
+            background: rgba(255,255,255,0.4);
+            transform: scale(1.05);
+        }
         .hero {
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.95) 0%, rgba(118, 75, 162, 0.95) 100%);
             color: white;
@@ -732,6 +759,86 @@
             background: linear-gradient(135deg, #1e8449 0%, #27ae60 100%);
             transform: scale(1.05);
         }
+        /* Singles Corner Section */
+        .singles-corner-section {
+            background: linear-gradient(135deg, #f5d0fe 0%, #e9b8ff 100%);
+            padding: 2rem;
+            border-radius: 15px;
+            margin: 2rem 0;
+            border: 3px solid #9b59b6;
+        }
+        .singles-corner-section h3 {
+            color: #6c3483;
+            font-size: 1.4rem;
+            margin-bottom: 1rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+        .singles-corner-section p {
+            color: #5b2c6f;
+            margin-bottom: 1.5rem;
+            font-size: 1.05rem;
+            line-height: 1.7;
+        }
+        .singles-contact-card {
+            background: white;
+            padding: 1.5rem;
+            border-radius: 12px;
+            margin-bottom: 1rem;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            border-right: 5px solid #9b59b6;
+            display: flex;
+            align-items: center;
+            gap: 1.5rem;
+            transition: all 0.3s;
+        }
+        .singles-contact-card:hover {
+            transform: translateX(-5px);
+            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+        }
+        .singles-contact-card .avatar {
+            background: linear-gradient(135deg, #e056fd 0%, #9b59b6 100%);
+            color: white;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.8rem;
+            flex-shrink: 0;
+        }
+        .singles-contact-card .details {
+            flex-grow: 1;
+        }
+        .singles-contact-card .name {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #2c3e50;
+            margin-bottom: 0.5rem;
+        }
+        .singles-contact-card .contact-info {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+        }
+        .singles-contact-card .contact-item {
+            display: flex;
+            align-items: center;
+            gap: 0.4rem;
+            color: #666;
+            font-size: 0.95rem;
+        }
+        .singles-contact-card .contact-item a {
+            color: #9b59b6;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        .singles-contact-card .contact-item a:hover {
+            color: #6c3483;
+            text-decoration: underline;
+        }
         .footer {
             text-align: center;
             padding: 3rem;
@@ -796,6 +903,10 @@
                 font-size: 1rem;
                 padding: 1rem;
             }
+            .singles-notice {
+                font-size: 0.95rem;
+                padding: 0.8rem 1rem;
+            }
             .assignment-link-card {
                 flex-direction: column;
                 gap: 1rem;
@@ -803,6 +914,13 @@
             }
             .assignment-link-card .info {
                 flex-direction: column;
+            }
+            .singles-contact-card {
+                flex-direction: column;
+                text-align: center;
+            }
+            .singles-contact-card .contact-info {
+                justify-content: center;
             }
         }
     </style>
@@ -813,7 +931,11 @@
         ⚠️ <strong>שימו לב!</strong> מועד מטלת הגשה 1 מתקרב (הגדרת נושא) – ראו פרטים באתר 
         <a href="1-ChoosingTopic.html">📋 להנחיות המלאות</a>
     </div>
-
+    <!-- Singles Notice Banner -->
+    <div class="singles-notice">
+        💕 <strong>חדש - פינת הרווקים!</strong> לא מצאתם בן / בת זוג לסמינר? 
+        <a href="#singles-corner">👋 לחצו כאן וצרו קשר עם סטודנטים/סטודנטיות במצב דומה</a>
+    </div>
     <div class="hero">
         <h1>🎓 סמינר בניהול פיננסי והשקעות 🎓</h1>
         <div class="subtitle">המרכז האקדמי למשפט ולעסקים רמת גן</div>
@@ -1386,7 +1508,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Assignments Links Section -->
             <div class="assignments-section">
                 <h3>📌 קישורים למטלות הגשה</h3>
@@ -1401,7 +1522,39 @@
                     <a href="1-ChoosingTopic.html">להנחיות המלאות →</a>
                 </div>
             </div>
-
+            <!-- Singles Corner Section -->
+            <div class="singles-corner-section" id="singles-corner">
+                <h3>💕 פינת הרווקים - מחפשים בן/בת זוג לסמינר</h3>
+                <p>
+                    עוד לא מצאתם שותף/ה לעבודת הסמינר? אתם לא לבד! להלן פרטי סטודנטים שמחפשים בן/בת זוג לעבודה המשותפת. 
+                    אל תהססו ליצור קשר ולמצוא את השותף/ה המושלם/ת עבורכם.
+                </p>
+                <div class="singles-contact-card">
+                    <div class="avatar">👤</div>
+                    <div class="details">
+                        <div class="name">גנא אבו נסים</div>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                📧 <a href="mailto:mhamedjanatawfeek@gmail.com">mhamedjanatawfeek@gmail.com</a>
+                            </div>
+                            <div class="contact-item">
+                                📱 <a href="tel:0529643743">052-964-3743</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="singles-contact-card">
+                    <div class="avatar">👤</div>
+                    <div class="details">
+                        <div class="name">טוהר חדד</div>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                📧 <a href="mailto:toharhadad12@gmail.com">toharhadad12@gmail.com</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
