--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,25 @@
                                 </iframe>
                             </div>
                         </div>
+                        <div class="lecture-item">
+                            <div class="lecture-title">
+                                📹 הרצאה 2 - בחירת נושא והגשתו - עקרונות ודגשים לקראת הגשה 1
+                                <span class="lecture-date">24.12.2025</span>
+                            </div>
+                            <div class="video-container">
+                                <iframe 
+                                    src="https://www.youtube.com/embed/TlzCEF3uMQ8" 
+                                    title="הרצאה 2 - בחירת נושא והגשתו - עקרונות ודגשים לקראת הגשה 1"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                    allowfullscreen>
+                                </iframe>
+                            </div>
+                            <div style="margin-top: 1rem; text-align: center;">
+                                <a href="https://mypac-my.sharepoint.com/:w:/g/personal/shay_tsaban_pac_org_il/IQCouOz2oT-8SYauoYlTcDHSAculh4fp-ZRSNT1b8x02MjA?e=Fg89xn" target="_blank" style="display: inline-flex; align-items: center; gap: 0.5rem; background: linear-gradient(135deg, #27ae60 0%, #2ecc71 100%); color: white; padding: 0.8rem 1.5rem; border-radius: 10px; text-decoration: none; font-weight: 600; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: all 0.3s;">
+                                    📄 סיכום כתוב של מפגש 2
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1519,7 +1538,10 @@
                             <div class="deadline">מועד הגשה: סוף דצמבר 2025</div>
                         </div>
                     </div>
-                    <a href="1-ChoosingTopic.html">להנחיות המלאות →</a>
+                    <div style="display: flex; gap: 0.8rem; flex-wrap: wrap;">
+                        <a href="1-ChoosingTopic.html">להנחיות המלאות →</a>
+                        <a href="https://mypac-my.sharepoint.com/:w:/g/personal/shay_tsaban_pac_org_il/IQCouOz2oT-8SYauoYlTcDHSAculh4fp-ZRSNT1b8x02MjA?e=Fg89xn" target="_blank">📄 סיכום מפגש 2</a>
+                    </div>
                 </div>
             </div>
             <!-- Singles Corner Section -->
@@ -1550,6 +1572,20 @@
                         <div class="contact-info">
                             <div class="contact-item">
                                 📧 <a href="mailto:toharhadad12@gmail.com">toharhadad12@gmail.com</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="singles-contact-card">
+                    <div class="avatar">👤</div>
+                    <div class="details">
+                        <div class="name">נורהאן הוארי</div>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                📧 <a href="mailto:Hawarynorhan16@gmail.com">Hawarynorhan16@gmail.com</a>
+                            </div>
+                            <div class="contact-item">
+                                📱 <a href="tel:0547151684">054-715-1684</a>
                             </div>
                         </div>
                     </div>
